// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PropertySearchResultList /> render by default should render the right structure 1`] = `
<PropertySearchResultList
  dropdownLabel={null}
  dropdownOnChange={[Function]}
  dropdownOptions={null}
  isShowingPlaceholder={false}
  isUserOnMobile={false}
  messageButtonOnClick={[Function]}
  messageButtonText={null}
  messageText={null}
  onChange={[Function]}
  propertySearchResults={
    Array [
      Object {
        "bathsNumber": 2,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 2,
        "bedsText": "beds",
        "guestsNumber": 2,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPeriodText": "per month",
        "priceLabelPricePerPeriod": "$28000",
        "priceLabelPricePerPeriodPrefix": "from",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "The Cat House",
        "propertyType": "Bed and breakfast",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
      Object {
        "bathsNumber": 1,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 3,
        "bedsText": "beds",
        "guestsNumber": 4,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPricePerPeriod": "$1280",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "Space Hub A-675",
        "propertyType": "Space Station",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
    ]
  }
  renderShowingResultsText={[Function]}
  resultsCountText="results"
>
  <div
    className="property-search-result-list"
  >
    <div
      className="result-list-container"
    >
      <FlexContainer
        alignContent={null}
        alignItems="center"
        flexDirection={null}
        flexWrap={null}
        justifyContent="space-between"
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": "center",
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": null,
              "height": "100%",
              "justifyContent": "space-between",
            }
          }
        >
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="small"
            textAlign={null}
          >
            <Header
              as="h4"
              className=""
              inverted={false}
              textAlign={null}
            >
              <h4
                className="ui header"
              >
                2 results
              </h4>
            </Header>
          </Heading>
        </div>
      </FlexContainer>
      <Divider
        className=""
        hasLine={false}
        size="small"
      >
        <Divider
          className="is-size-small"
          hidden={true}
          section={false}
        >
          <div
            className="ui hidden divider is-size-small"
          />
        </Divider>
      </Divider>
      <FlexContainer
        alignContent={null}
        alignItems={null}
        flexDirection={null}
        flexWrap="wrap"
        justifyContent={null}
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": null,
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": "wrap",
              "height": "100%",
              "justifyContent": null,
            }
          }
        >
          <PropertySearchResult
            bathsNumber={2}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={2}
            bedsText="beds"
            guestsNumber={2}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="The Cat House0"
            priceLabelPeriodText="per month"
            priceLabelPricePerPeriod="$28000"
            priceLabelPricePerPeriodPrefix="from"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="The Cat House"
            propertyType="Bed and breakfast"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={1}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={3}
            bedsText="beds"
            guestsNumber={4}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="Space Hub A-6751"
            priceLabelPricePerPeriod="$1280"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="Space Hub A-675"
            propertyType="Space Station"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
        </div>
      </FlexContainer>
    </div>
  </div>
</PropertySearchResultList>
`;

exports[`<PropertySearchResultList /> render if \`isUserOnMobile\` === true should return the right structure 1`] = `
<PropertySearchResultList
  dropdownLabel={null}
  dropdownOnChange={[Function]}
  dropdownOptions={null}
  isShowingPlaceholder={false}
  isUserOnMobile={true}
  messageButtonOnClick={[Function]}
  messageButtonText={null}
  messageText={null}
  onChange={[Function]}
  propertySearchResults={
    Array [
      Object {
        "bathsNumber": 2,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 2,
        "bedsText": "beds",
        "guestsNumber": 2,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPeriodText": "per month",
        "priceLabelPricePerPeriod": "$28000",
        "priceLabelPricePerPeriodPrefix": "from",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "The Cat House",
        "propertyType": "Bed and breakfast",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
      Object {
        "bathsNumber": 1,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 3,
        "bedsText": "beds",
        "guestsNumber": 4,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPricePerPeriod": "$1280",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "Space Hub A-675",
        "propertyType": "Space Station",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
    ]
  }
  renderShowingResultsText={[Function]}
  resultsCountText="results"
>
  <div
    className="property-search-result-list"
  >
    <div
      className="result-list-container"
    >
      <FlexContainer
        alignContent={null}
        alignItems="center"
        flexDirection={null}
        flexWrap={null}
        justifyContent="space-between"
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": "center",
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": null,
              "height": "100%",
              "justifyContent": "space-between",
            }
          }
        >
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="small"
            textAlign={null}
          >
            <Header
              as="h4"
              className=""
              inverted={false}
              textAlign={null}
            >
              <h4
                className="ui header"
              >
                2 results
              </h4>
            </Header>
          </Heading>
        </div>
      </FlexContainer>
      <Divider
        className=""
        hasLine={false}
        size="small"
      >
        <Divider
          className="is-size-small"
          hidden={true}
          section={false}
        >
          <div
            className="ui hidden divider is-size-small"
          />
        </Divider>
      </Divider>
      <FlexContainer
        alignContent={null}
        alignItems={null}
        flexDirection={null}
        flexWrap="wrap"
        justifyContent={null}
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": null,
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": "wrap",
              "height": "100%",
              "justifyContent": null,
            }
          }
        >
          <PropertySearchResult
            bathsNumber={2}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={2}
            bedsText="beds"
            guestsNumber={2}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="The Cat House0"
            priceLabelPeriodText="per month"
            priceLabelPricePerPeriod="$28000"
            priceLabelPricePerPeriodPrefix="from"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="The Cat House"
            propertyType="Bed and breakfast"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={1}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={3}
            bedsText="beds"
            guestsNumber={4}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="Space Hub A-6751"
            priceLabelPricePerPeriod="$1280"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="Space Hub A-675"
            propertyType="Space Station"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
        </div>
      </FlexContainer>
    </div>
  </div>
</PropertySearchResultList>
`;

exports[`<PropertySearchResultList /> render if \`props.activePage\` is defined should render the right structure 1`] = `
<PropertySearchResultList
  activePage={12000}
  dropdownLabel={null}
  dropdownOnChange={[Function]}
  dropdownOptions={null}
  isShowingPlaceholder={false}
  isUserOnMobile={false}
  messageButtonOnClick={[Function]}
  messageButtonText={null}
  messageText={null}
  onChange={[Function]}
  propertySearchResults={
    Array [
      Object {
        "bathsNumber": 2,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 2,
        "bedsText": "beds",
        "guestsNumber": 2,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPeriodText": "per month",
        "priceLabelPricePerPeriod": "$28000",
        "priceLabelPricePerPeriodPrefix": "from",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "The Cat House",
        "propertyType": "Bed and breakfast",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
      Object {
        "bathsNumber": 1,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 3,
        "bedsText": "beds",
        "guestsNumber": 4,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPricePerPeriod": "$1280",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "Space Hub A-675",
        "propertyType": "Space Station",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
    ]
  }
  renderShowingResultsText={[Function]}
  resultsCountText="results"
>
  <div
    className="property-search-result-list"
  >
    <div
      className="result-list-container"
    >
      <FlexContainer
        alignContent={null}
        alignItems="center"
        flexDirection={null}
        flexWrap={null}
        justifyContent="space-between"
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": "center",
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": null,
              "height": "100%",
              "justifyContent": "space-between",
            }
          }
        >
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="small"
            textAlign={null}
          >
            <Header
              as="h4"
              className=""
              inverted={false}
              textAlign={null}
            >
              <h4
                className="ui header"
              >
                2 results
              </h4>
            </Header>
          </Heading>
        </div>
      </FlexContainer>
      <Divider
        className=""
        hasLine={false}
        size="small"
      >
        <Divider
          className="is-size-small"
          hidden={true}
          section={false}
        >
          <div
            className="ui hidden divider is-size-small"
          />
        </Divider>
      </Divider>
      <FlexContainer
        alignContent={null}
        alignItems={null}
        flexDirection={null}
        flexWrap="wrap"
        justifyContent={null}
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": null,
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": "wrap",
              "height": "100%",
              "justifyContent": null,
            }
          }
        >
          <PropertySearchResult
            bathsNumber={2}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={2}
            bedsText="beds"
            guestsNumber={2}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="The Cat House0"
            priceLabelPeriodText="per month"
            priceLabelPricePerPeriod="$28000"
            priceLabelPricePerPeriodPrefix="from"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="The Cat House"
            propertyType="Bed and breakfast"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={1}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={3}
            bedsText="beds"
            guestsNumber={4}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="Space Hub A-6751"
            priceLabelPricePerPeriod="$1280"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="Space Hub A-675"
            propertyType="Space Station"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
        </div>
      </FlexContainer>
    </div>
  </div>
</PropertySearchResultList>
`;

exports[`<PropertySearchResultList /> render if \`props.dropdownOptions\` is passed should render the right structure 1`] = `
<PropertySearchResultList
  dropdownLabel={null}
  dropdownOnChange={[Function]}
  dropdownOptions={null}
  isShowingPlaceholder={false}
  isUserOnMobile={
    Object {
      "dropdownLabel": "some label",
      "dropdownOnChange": [Function],
      "dropdownOptions": Array [
        Object {
          "content": "Price (lowest to highest)",
          "text": "Sort by price (lowest first)",
          "value": "price",
        },
      ],
      "dropdownValue": "price",
    }
  }
  messageButtonOnClick={[Function]}
  messageButtonText={null}
  messageText={null}
  onChange={[Function]}
  propertySearchResults={
    Array [
      Object {
        "bathsNumber": 2,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 2,
        "bedsText": "beds",
        "guestsNumber": 2,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPeriodText": "per month",
        "priceLabelPricePerPeriod": "$28000",
        "priceLabelPricePerPeriodPrefix": "from",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "The Cat House",
        "propertyType": "Bed and breakfast",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
      Object {
        "bathsNumber": 1,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 3,
        "bedsText": "beds",
        "guestsNumber": 4,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPricePerPeriod": "$1280",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "Space Hub A-675",
        "propertyType": "Space Station",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
    ]
  }
  renderShowingResultsText={[Function]}
  resultsCountText="results"
>
  <div
    className="property-search-result-list"
  >
    <div
      className="result-list-container"
    >
      <FlexContainer
        alignContent={null}
        alignItems="center"
        flexDirection={null}
        flexWrap={null}
        justifyContent="space-between"
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": "center",
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": null,
              "height": "100%",
              "justifyContent": "space-between",
            }
          }
        >
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="small"
            textAlign={null}
          >
            <Header
              as="h4"
              className=""
              inverted={false}
              textAlign={null}
            >
              <h4
                className="ui header"
              >
                2 results
              </h4>
            </Header>
          </Heading>
        </div>
      </FlexContainer>
      <Divider
        className=""
        hasLine={false}
        size="small"
      >
        <Divider
          className="is-size-small"
          hidden={true}
          section={false}
        >
          <div
            className="ui hidden divider is-size-small"
          />
        </Divider>
      </Divider>
      <FlexContainer
        alignContent={null}
        alignItems={null}
        flexDirection={null}
        flexWrap="wrap"
        justifyContent={null}
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": null,
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": "wrap",
              "height": "100%",
              "justifyContent": null,
            }
          }
        >
          <PropertySearchResult
            bathsNumber={2}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={2}
            bedsText="beds"
            guestsNumber={2}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="The Cat House0"
            priceLabelPeriodText="per month"
            priceLabelPricePerPeriod="$28000"
            priceLabelPricePerPeriodPrefix="from"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="The Cat House"
            propertyType="Bed and breakfast"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={1}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={3}
            bedsText="beds"
            guestsNumber={4}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="Space Hub A-6751"
            priceLabelPricePerPeriod="$1280"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="Space Hub A-675"
            propertyType="Space Station"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
        </div>
      </FlexContainer>
    </div>
  </div>
</PropertySearchResultList>
`;

exports[`<PropertySearchResultList /> render if \`props.isShowingPlaceholder\` is true should render the right structure 1`] = `
<PropertySearchResultList
  dropdownLabel={null}
  dropdownOnChange={[Function]}
  dropdownOptions={null}
  isShowingPlaceholder={true}
  isUserOnMobile={false}
  messageButtonOnClick={[Function]}
  messageButtonText={null}
  messageText={null}
  onChange={[Function]}
  propertySearchResults={Array []}
  renderShowingResultsText={[Function]}
  resultsCountText="results"
>
  <div
    className="property-search-result-list"
  >
    <div
      className="result-list-container"
    >
      <FlexContainer
        alignContent={null}
        alignItems="center"
        flexDirection={null}
        flexWrap={null}
        justifyContent="space-between"
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": "center",
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": null,
              "height": "100%",
              "justifyContent": "space-between",
            }
          }
        >
          <FlexContainer
            alignContent={null}
            alignItems={null}
            flexDirection={null}
            flexWrap={null}
            justifyContent={null}
          >
            <div
              className="flex-container"
              style={
                Object {
                  "alignContent": null,
                  "alignItems": null,
                  "display": "flex",
                  "flexDirection": null,
                  "flexGrow": "1",
                  "flexWrap": null,
                  "height": "100%",
                  "justifyContent": null,
                }
              }
            >
              <TextPlaceholder
                isFluid={true}
                length="short"
              >
                <div
                  className="placeholder text short fluid"
                />
              </TextPlaceholder>
            </div>
          </FlexContainer>
        </div>
      </FlexContainer>
      <Divider
        className=""
        hasLine={false}
        size="small"
      >
        <Divider
          className="is-size-small"
          hidden={true}
          section={false}
        >
          <div
            className="ui hidden divider is-size-small"
          />
        </Divider>
      </Divider>
      <FlexContainer
        alignContent={null}
        alignItems={null}
        flexDirection={null}
        flexWrap="wrap"
        justifyContent={null}
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": null,
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": "wrap",
              "height": "100%",
              "justifyContent": null,
            }
          }
        >
          <PropertySearchResult
            bathsNumber={0}
            bathsText=""
            bedroomsNumber={0}
            bedroomsText=""
            bedsNumber={0}
            bedsText=""
            guestsNumber={0}
            guestsText=""
            imageUrl=""
            isShowingPlaceholder={true}
            key="placeholder0"
            pricePerPeriod=""
            propertyAmenities={
              Array [
                "",
                "",
              ]
            }
            propertyName="placeholder"
            propertyType=""
            propertyUrl=""
            ratingNumber={0}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={0}
            bathsText=""
            bedroomsNumber={0}
            bedroomsText=""
            bedsNumber={0}
            bedsText=""
            guestsNumber={0}
            guestsText=""
            imageUrl=""
            isShowingPlaceholder={true}
            key="placeholder1"
            pricePerPeriod=""
            propertyAmenities={
              Array [
                "",
                "",
              ]
            }
            propertyName="placeholder"
            propertyType=""
            propertyUrl=""
            ratingNumber={0}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={0}
            bathsText=""
            bedroomsNumber={0}
            bedroomsText=""
            bedsNumber={0}
            bedsText=""
            guestsNumber={0}
            guestsText=""
            imageUrl=""
            isShowingPlaceholder={true}
            key="placeholder2"
            pricePerPeriod=""
            propertyAmenities={
              Array [
                "",
                "",
              ]
            }
            propertyName="placeholder"
            propertyType=""
            propertyUrl=""
            ratingNumber={0}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={0}
            bathsText=""
            bedroomsNumber={0}
            bedroomsText=""
            bedsNumber={0}
            bedsText=""
            guestsNumber={0}
            guestsText=""
            imageUrl=""
            isShowingPlaceholder={true}
            key="placeholder3"
            pricePerPeriod=""
            propertyAmenities={
              Array [
                "",
                "",
              ]
            }
            propertyName="placeholder"
            propertyType=""
            propertyUrl=""
            ratingNumber={0}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={0}
            bathsText=""
            bedroomsNumber={0}
            bedroomsText=""
            bedsNumber={0}
            bedsText=""
            guestsNumber={0}
            guestsText=""
            imageUrl=""
            isShowingPlaceholder={true}
            key="placeholder4"
            pricePerPeriod=""
            propertyAmenities={
              Array [
                "",
                "",
              ]
            }
            propertyName="placeholder"
            propertyType=""
            propertyUrl=""
            ratingNumber={0}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={0}
            bathsText=""
            bedroomsNumber={0}
            bedroomsText=""
            bedsNumber={0}
            bedsText=""
            guestsNumber={0}
            guestsText=""
            imageUrl=""
            isShowingPlaceholder={true}
            key="placeholder5"
            pricePerPeriod=""
            propertyAmenities={
              Array [
                "",
                "",
              ]
            }
            propertyName="placeholder"
            propertyType=""
            propertyUrl=""
            ratingNumber={0}
          >
            <div />
          </PropertySearchResult>
        </div>
      </FlexContainer>
    </div>
  </div>
</PropertySearchResultList>
`;

exports[`<PropertySearchResultList /> render if \`props.messageText\` is passed should render the right structure 1`] = `
<PropertySearchResultList
  dropdownLabel={null}
  dropdownOnChange={[Function]}
  dropdownOptions={null}
  isShowingPlaceholder={false}
  isUserOnMobile={false}
  messageButtonOnClick={[Function]}
  messageButtonText="Some button text"
  messageText="Some message text"
  onChange={[Function]}
  propertySearchResults={
    Array [
      Object {
        "bathsNumber": 2,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 2,
        "bedsText": "beds",
        "guestsNumber": 2,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPeriodText": "per month",
        "priceLabelPricePerPeriod": "$28000",
        "priceLabelPricePerPeriodPrefix": "from",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "The Cat House",
        "propertyType": "Bed and breakfast",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
      Object {
        "bathsNumber": 1,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 3,
        "bedsText": "beds",
        "guestsNumber": 4,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPricePerPeriod": "$1280",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "Space Hub A-675",
        "propertyType": "Space Station",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
    ]
  }
  renderShowingResultsText={[Function]}
  resultsCountText="results"
>
  <div
    className="property-search-result-list"
  >
    <div
      className="result-list-container"
    >
      <FlexContainer
        alignContent={null}
        alignItems="center"
        flexDirection={null}
        flexWrap={null}
        justifyContent="space-between"
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": "center",
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": null,
              "height": "100%",
              "justifyContent": "space-between",
            }
          }
        >
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="small"
            textAlign={null}
          >
            <Header
              as="h4"
              className=""
              inverted={false}
              textAlign={null}
            >
              <h4
                className="ui header"
              >
                2 results
              </h4>
            </Header>
          </Heading>
        </div>
      </FlexContainer>
      <Message
        isTextAlignedCenter={false}
      >
        <Message
          className="padded"
        >
          <div
            className="ui message padded"
          >
            <FlexContainer
              alignContent={null}
              alignItems="center"
              flexDirection={null}
              flexWrap={null}
              justifyContent="space-between"
            >
              <div
                className="flex-container"
                style={
                  Object {
                    "alignContent": null,
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": null,
                    "flexGrow": "1",
                    "flexWrap": null,
                    "height": "100%",
                    "justifyContent": "space-between",
                  }
                }
              >
                Some message text
                <Link
                  href={null}
                  isFluid={false}
                  isPositionedRight={false}
                  onClick={[Function]}
                  willOpenInNewTab={false}
                >
                  <Button
                    as={null}
                    basic={true}
                    floated="left"
                    fluid={false}
                    href={null}
                    onClick={[Function]}
                    target="_self"
                    type="button"
                  >
                    <button
                      className="ui basic left floated button"
                      href={null}
                      onClick={[Function]}
                      role="button"
                      target="_self"
                      type="button"
                    >
                      Some button text
                    </button>
                  </Button>
                </Link>
              </div>
            </FlexContainer>
          </div>
        </Message>
      </Message>
      <FlexContainer
        alignContent={null}
        alignItems={null}
        flexDirection={null}
        flexWrap="wrap"
        justifyContent={null}
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": null,
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": "wrap",
              "height": "100%",
              "justifyContent": null,
            }
          }
        >
          <PropertySearchResult
            bathsNumber={2}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={2}
            bedsText="beds"
            guestsNumber={2}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="The Cat House0"
            priceLabelPeriodText="per month"
            priceLabelPricePerPeriod="$28000"
            priceLabelPricePerPeriodPrefix="from"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="The Cat House"
            propertyType="Bed and breakfast"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={1}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={3}
            bedsText="beds"
            guestsNumber={4}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="Space Hub A-6751"
            priceLabelPricePerPeriod="$1280"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="Space Hub A-675"
            propertyType="Space Station"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
        </div>
      </FlexContainer>
    </div>
  </div>
</PropertySearchResultList>
`;

exports[`<PropertySearchResultList /> render if \`props.propertySearchResults.length\` > 12  should render the right structure 1`] = `
<PropertySearchResultList
  dropdownLabel={null}
  dropdownOnChange={[Function]}
  dropdownOptions={null}
  isShowingPlaceholder={false}
  isUserOnMobile={
    Object {
      "propertySearchResults": Array [
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
        Object {
          "bathsNumber": 2,
          "bathsText": "baths",
          "bedroomsNumber": 2,
          "bedroomsText": "bedrooms",
          "bedsNumber": 2,
          "bedsText": "beds",
          "guestsNumber": 2,
          "guestsText": "guests",
          "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "priceLabelPeriodText": "per month",
          "priceLabelPricePerPeriod": "$28000",
          "priceLabelPricePerPeriodPrefix": "from",
          "propertyAmenities": Array [
            "Pool",
            "Wifi",
            "Washer",
            "Kitchen",
          ],
          "propertyName": "The Cat House",
          "propertyType": "Bed and breakfast",
          "propertyUrl": "/",
          "ratingNumber": 4.7,
        },
      ],
    }
  }
  messageButtonOnClick={[Function]}
  messageButtonText={null}
  messageText={null}
  onChange={[Function]}
  propertySearchResults={
    Array [
      Object {
        "bathsNumber": 2,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 2,
        "bedsText": "beds",
        "guestsNumber": 2,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPeriodText": "per month",
        "priceLabelPricePerPeriod": "$28000",
        "priceLabelPricePerPeriodPrefix": "from",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "The Cat House",
        "propertyType": "Bed and breakfast",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
      Object {
        "bathsNumber": 1,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 3,
        "bedsText": "beds",
        "guestsNumber": 4,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPricePerPeriod": "$1280",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "Space Hub A-675",
        "propertyType": "Space Station",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
    ]
  }
  renderShowingResultsText={[Function]}
  resultsCountText="results"
>
  <div
    className="property-search-result-list"
  >
    <div
      className="result-list-container"
    >
      <FlexContainer
        alignContent={null}
        alignItems="center"
        flexDirection={null}
        flexWrap={null}
        justifyContent="space-between"
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": "center",
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": null,
              "height": "100%",
              "justifyContent": "space-between",
            }
          }
        >
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="small"
            textAlign={null}
          >
            <Header
              as="h4"
              className=""
              inverted={false}
              textAlign={null}
            >
              <h4
                className="ui header"
              >
                2 results
              </h4>
            </Header>
          </Heading>
        </div>
      </FlexContainer>
      <Divider
        className=""
        hasLine={false}
        size="small"
      >
        <Divider
          className="is-size-small"
          hidden={true}
          section={false}
        >
          <div
            className="ui hidden divider is-size-small"
          />
        </Divider>
      </Divider>
      <FlexContainer
        alignContent={null}
        alignItems={null}
        flexDirection={null}
        flexWrap="wrap"
        justifyContent={null}
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": null,
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": "wrap",
              "height": "100%",
              "justifyContent": null,
            }
          }
        >
          <PropertySearchResult
            bathsNumber={2}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={2}
            bedsText="beds"
            guestsNumber={2}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="The Cat House0"
            priceLabelPeriodText="per month"
            priceLabelPricePerPeriod="$28000"
            priceLabelPricePerPeriodPrefix="from"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="The Cat House"
            propertyType="Bed and breakfast"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={1}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={3}
            bedsText="beds"
            guestsNumber={4}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="Space Hub A-6751"
            priceLabelPricePerPeriod="$1280"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="Space Hub A-675"
            propertyType="Space Station"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
        </div>
      </FlexContainer>
    </div>
  </div>
</PropertySearchResultList>
`;

exports[`<PropertySearchResultList /> render if \`props.resultsCountText\` is passed should render the right structure 1`] = `
<PropertySearchResultList
  dropdownLabel={null}
  dropdownOnChange={[Function]}
  dropdownOptions={null}
  isShowingPlaceholder={false}
  isUserOnMobile={false}
  messageButtonOnClick={[Function]}
  messageButtonText={null}
  messageText={null}
  onChange={[Function]}
  propertySearchResults={
    Array [
      Object {
        "bathsNumber": 2,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 2,
        "bedsText": "beds",
        "guestsNumber": 2,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPeriodText": "per month",
        "priceLabelPricePerPeriod": "$28000",
        "priceLabelPricePerPeriodPrefix": "from",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "The Cat House",
        "propertyType": "Bed and breakfast",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
      Object {
        "bathsNumber": 1,
        "bathsText": "baths",
        "bedroomsNumber": 2,
        "bedroomsText": "bedrooms",
        "bedsNumber": 3,
        "bedsText": "beds",
        "guestsNumber": 4,
        "guestsText": "guests",
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "priceLabelPricePerPeriod": "$1280",
        "propertyAmenities": Array [
          "Pool",
          "Wifi",
          "Washer",
          "Kitchen",
        ],
        "propertyName": "Space Hub A-675",
        "propertyType": "Space Station",
        "propertyUrl": "/",
        "ratingNumber": 4.7,
      },
    ]
  }
  renderShowingResultsText={[Function]}
  resultsCountText="My god I love Cliff Richard"
>
  <div
    className="property-search-result-list"
  >
    <div
      className="result-list-container"
    >
      <FlexContainer
        alignContent={null}
        alignItems="center"
        flexDirection={null}
        flexWrap={null}
        justifyContent="space-between"
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": "center",
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": null,
              "height": "100%",
              "justifyContent": "space-between",
            }
          }
        >
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="small"
            textAlign={null}
          >
            <Header
              as="h4"
              className=""
              inverted={false}
              textAlign={null}
            >
              <h4
                className="ui header"
              >
                2 My god I love Cliff Richard
              </h4>
            </Header>
          </Heading>
        </div>
      </FlexContainer>
      <Divider
        className=""
        hasLine={false}
        size="small"
      >
        <Divider
          className="is-size-small"
          hidden={true}
          section={false}
        >
          <div
            className="ui hidden divider is-size-small"
          />
        </Divider>
      </Divider>
      <FlexContainer
        alignContent={null}
        alignItems={null}
        flexDirection={null}
        flexWrap="wrap"
        justifyContent={null}
      >
        <div
          className="flex-container"
          style={
            Object {
              "alignContent": null,
              "alignItems": null,
              "display": "flex",
              "flexDirection": null,
              "flexGrow": "1",
              "flexWrap": "wrap",
              "height": "100%",
              "justifyContent": null,
            }
          }
        >
          <PropertySearchResult
            bathsNumber={2}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={2}
            bedsText="beds"
            guestsNumber={2}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="The Cat House0"
            priceLabelPeriodText="per month"
            priceLabelPricePerPeriod="$28000"
            priceLabelPricePerPeriodPrefix="from"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="The Cat House"
            propertyType="Bed and breakfast"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
          <PropertySearchResult
            bathsNumber={1}
            bathsText="baths"
            bedroomsNumber={2}
            bedroomsText="bedrooms"
            bedsNumber={3}
            bedsText="beds"
            guestsNumber={4}
            guestsText="guests"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            isShowingPlaceholder={false}
            key="Space Hub A-6751"
            priceLabelPricePerPeriod="$1280"
            propertyAmenities={
              Array [
                "Pool",
                "Wifi",
                "Washer",
                "Kitchen",
              ]
            }
            propertyName="Space Hub A-675"
            propertyType="Space Station"
            propertyUrl="/"
            ratingNumber={4.7}
          >
            <div />
          </PropertySearchResult>
        </div>
      </FlexContainer>
    </div>
  </div>
</PropertySearchResultList>
`;
